--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
 		    <artifactId>selenium-chrome-driver</artifactId>
 		    <version>4.11.0</version>
 		</dependency>
+			<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-grid</artifactId>
+    		<version>4.11.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-remote-driver</artifactId>
+		    <version>4.11.0</version>
+		</dependency>
         <dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
