--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
-version: '3'
+version: "3"
 services:
-    selenium-hub:
-        image: selenium/hub:latest
-        ports:
-        - "4444:4444"
     selenium-chrome:
         image: selenium/node-chrome:latest
+        shm_size: 2gb
         depends_on:
-            - selenium-hub
+        - selenium-hub
         environment:
-            HUB_HOST: selenium-hub
-            HUB_PORT: 4444
-        shm_size: 2g
+        - SE_EVENT_BUS_HOST=selenium-hub
+        - SE_EVENT_BUS_PUBLISH_PORT=4442
+        - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+    selenium-hub:
+        image: selenium/hub:latest
+        container_name: selenium-hub
+        ports:
+        - "4442:4442"
+        - "4443:4443"
+        - "4444:4444"
     acceptance_test:
         build: .
         depends_on:
