--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,12 @@
-version: "3"
+version: '3'
 services:
-    selenium-chrome:
-        image: selenium/node-chrome:latest
-        shm_size: 2gb
-        depends_on:
-        - selenium-hub
-        environment:
-        - SE_EVENT_BUS_HOST=selenium-hub
-        - SE_EVENT_BUS_PUBLISH_PORT=4442
-        - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    selenium-hub:
-        image: selenium/hub:latest
-        container_name: selenium-hub
+    selenium:
+        image: selenium/standalone-chrome:latest
         ports:
-        - "4442:4442"
-        - "4443:4443"
         - "4444:4444"
+        - "7900:7900"
+        shm_size: 2g
     acceptance_test:
         build: .
         depends_on:
-        - selenium-chrome
-        environment:
-            SELENIUM_HUB_HOST: selenium-hub
-            SELENIUM_HUB_PORT: 4444
-
+        - selenium
